styles/globals.css
@import url('./theme.css');

html {
  padding: 0;
  margin: 0;
  font-family: 'Inter', Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
  scroll-behavior: smooth;
  overflow-y: scroll;
}

::-webkit-scrollbar {
  display: none;
}

body {
  padding: 0;
  margin: 0;
  color: var(--text-color);
  background: var(--background-color1);
}

#__next {
  min-height: 100vh;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.no-scroll {
  max-height: 100vh;
  overflow: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

h1 {
  font-style: var(--h1-font-style);
  font-weight: var(--h1-font-weight);
  font-size: var(--h1-font-size);
  line-height: var(--h1-line-height);
  text-align: center;
  margin: 0;
  padding: 0 0 20px;
}

@media screen and (min-width: 768px) {
}

@media screen and (min-width: 1024px) {
  h1 {
    padding: 0 0 25px;
    text-align: left;
  }
}

@media screen and (min-width: 1280px) {
}

